--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -16,6 +16,8 @@
     <meta name="twitter:creator" content="@brownishvn">
 	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,6 +50,50 @@
         </div>
 
     </header>
+
+    <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item">
+                        <img src="../footer/gameon_logo.png" width="200" height="200">
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Liên hệ với chúng tôi</h3>
+                        <ul>
+                            <li><a href="#">Hotline 24/7: 1900-1508 </a></li>
+                            <li style="font-size: 10px;">(Cước di động: 1000 đồng/phút)</a></li>
+                            <li style="font-size: 14px;"><a href="#">Hỗ trợ khách hàng: hotro@st.uel.edu.vn</a></li>
+                            <li><a href="#">Hướng dẫn đặt hàng</a></li>
+                            <li><a href="#">Phương thức thanh toán</a></li>
+                            <li><a href="#">Chính sách đổi trả</a></li>
+                            <li><a href="#">Cam kết bảo mật</a></li>
+                            
+                        </ul>
+                    </div>
+                    
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Trải nghiệm GAME ON </h3>
+                        <ul>
+                            <li><a href="#">Về Trang chủ</a></li>
+                            <li><a href="#">Tất cả sản phẩm</a></li>
+                            <li><a href="#">Về chúng tôi</a></li>
+                            <li><a href="#">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 item social">
+                        <h3>Theo dõi chúng tôi tại </h3>
+                        <a href="#"><i class="icon ion-social-facebook"></i></a>
+                        <a href="#"><i class="icon ion-social-twitter"></i></a>
+                        <a href="#"><i class="icon ion-social-instagram"></i></a>
+                        <p class="copyright">GAME ON © 2024</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     {% block body %}{% endblock %}
     <!-- custom js link -->
     <script type="text/javascript" src="{% static 'interface/scripts.js'%}"></script>
