--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -51,12 +51,13 @@
 
     </header>
 
+    <footer>
     <div class="footer-clean">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-4 col-md-3 item">
-                        <img src="../footer/gameon_logo.png" width="200" height="200">
+                        <img src="interface\static\interface\images\gameon_logo.png" width="200" height="200">
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Liên hệ với chúng tôi</h3>
@@ -92,6 +93,7 @@
             </div>
         </footer>
     </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     {% block body %}{% endblock %}
