--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -52,12 +52,12 @@
     </header>
 
     <footer>
-    <div class="footer-clean">
+        <div class="footer-clean">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-4 col-md-3 item">
-                        <img src="interface\static\interface\images\gameon_logo.png" width="200" height="200">
+                        <img src="{% static 'interface/images/gameon_logo.png' %}" class="logo" alt="" width="200" height="200">
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Liên hệ với chúng tôi</h3>
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </footer>
-    </div>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
