--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -34,7 +34,7 @@ header {
     align-items: center;
     justify-content: space-between;
     /* background: #d87d48; */
-    background: #c89494;
+    background: #b0c2da;
     padding: 2px 5% 0px;
     border-bottom: 1px solid #f7f9fb;
     transition: all .45s ease;
