--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -291,7 +291,7 @@ section:not(.home-index) {
 }
 
 header.sticky {
-    background: burlywood;
+    background: #b0c2da;
     padding: 2px 6%;
 }
 
