--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -29,7 +29,7 @@
 <body>
     <!-- header section design -->
     <header>
-        <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/logo.png' %}" class="logo" alt=""></a>
+        <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}" class="logo" alt=""></a>
         <ul class="navbar">
             <li><a href="{% url 'index' %}" id="navbar-index">Trang chủ</a></li>
             <li><a href="{% url 'about_us' %}" id="navbar-about-us">Về chúng tôi</a></li>
