--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <!-- header section design -->
-    <header>
+    <header style="background: #b0c2da;">
         <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}" class="logo" alt="" width="100" height="100"></a>
         <ul class="navbar">
             <li><a href="{% url 'index' %}" id="navbar-index">Trang chủ</a></li>
