--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -29,7 +29,7 @@
 <body>
     <!-- header section design -->
     <header style="background: #b0c2da;">
-        <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}" alt="" width="80" height="80"></a>
+        <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}" alt="" width="70" height="70"></a>
         <ul class="navbar">
             <li><a href="{% url 'index' %}" id="navbar-index">Trang chủ</a></li>
             <li><a href="{% url 'about_us' %}" id="navbar-about-us">Về chúng tôi</a></li>
@@ -60,7 +60,7 @@
                         <img src="{% static 'interface/images/gameon_logo.png' %}" class="logo" alt="" width="200" height="200">
                     </div>
                     <div class="col-sm-4 col-md-3 item">
-                        <h3>Liên hệ với chúng tôi</h3>
+                        <h3 style="font-size: 12px;">Liên hệ với chúng tôi</h3>
                         <ul>
                             <li><a href="#">Hotline 24/7: 1900-1508 </a></li>
                             <li style="font-size: 10px;">(Cước di động: 1000 đồng/phút)</a></li>
