--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -22,16 +22,16 @@
     <section class="home-index">
         <div class="slide-list">
             <div class="slide">
-                <img src="{% static 'interface/images/bg01.png' %}">
+                <img src="{% static 'interface/images/1.png' %}">
             </div>
             <div class="slide">
-                <img src="{% static 'interface/images/bg02.png' %}"> 
+                <img src="{% static 'interface/images/2.png' %}"> 
             </div>
             <div class="slide">
-                <img src="{% static 'interface/images/bg03.png' %}"> 
+                <img src="{% static 'interface/images/3.png' %}"> 
             </div>
             <div class="slide">
-                <img src="{% static 'interface/images/bg04.jpg' %}"> 
+                <img src="{% static 'interface/images/4.jpg' %}"> 
             </div>
         </div>
         <div class="slide-buttons">
