--- a/interface/templates/interface/commerce.html
+++ b/interface/templates/interface/commerce.html
@@ -31,7 +31,7 @@
                 <img src="{% static 'interface/images/3.png' %}"> 
             </div>
             <div class="slide">
-                <img src="{% static 'interface/images/4.jpg' %}"> 
+                <img src="{% static 'interface/images/4.png' %}"> 
             </div>
         </div>
         <div class="slide-buttons">
