--- a/interface/templates/interface/blog.html
+++ b/interface/templates/interface/blog.html
@@ -1,7 +1,7 @@
 {% extends "interface/layout.html" %}
 {% load static %}
 
-{% block title %}Trang Blog - Brownish Clothing{% endblock %}
+{% block title %}Trang Blog - GameOn{% endblock %}
     <!-- home section design -->
 {% block body %}
     <div id="page-type" style="display:none">blog</div>
@@ -9,7 +9,7 @@
         <div class="home-img"><img src="{% static 'interface/images/home_image.png' %}" alt="Home Image"></div>
         <div class="home-text">
             <h4>Xem thử trang blog của bạn có gì!!</h4>
-            <h1>Khám phá những tin tức mới nhất về thời trang</h1>
+            <h1>Khám phá những tin tức mới nhất về Boardgame</h1>
             <a href="#news_view" class="btn">Khám phá ngay</a>
         </div>
     </section>
