--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -29,7 +29,7 @@
 <body>
     <!-- header section design -->
     <header style="background: #b0c2da;">
-        <a id="header-logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}" alt="" width="70" height="70"></a>
+        <a id="header-logo" class="logo" href="{% url 'index' %}"><img src="{% static 'interface/images/gameon_logo.png' %}"></a>
         <ul class="navbar">
             <li><a href="{% url 'index' %}" id="navbar-index">Trang chủ</a></li>
             <li><a href="{% url 'about_us' %}" id="navbar-about-us">Về chúng tôi</a></li>
@@ -51,6 +51,10 @@
 
     </header>
 
+    
+    
+    {% block body %}{% endblock %}
+    <!-- custom js link -->
     <footer>
         <div class="footer-clean">
         <footer>
@@ -96,8 +100,6 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-    {% block body %}{% endblock %}
-    <!-- custom js link -->
     <script type="text/javascript" src="{% static 'interface/scripts.js'%}"></script>
     <script src="https://kit.fontawesome.com/ac094792cb.js" crossorigin="anonymous"></script>
     {% comment %} <script src="https://kit.fontawesome.com/ac094792cb.js" crossorigin="anonymous"></script>
