--- a/interface/templates/interface/login.html
+++ b/interface/templates/interface/login.html
@@ -12,10 +12,10 @@
                 {{response}}
             {% endif %}
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Tên đăng nhập">
+            <input autofocus type="text" name="username" placeholder="Tên đăng nhập">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Mật khẩu">
+            <input type="password" name="password" placeholder="Mật khẩu">
         </div>
         <input class="btn btn-primary" type="submit" value="Đăng nhập">
         <span>Chưa có tài khoản?<a href="{% url 'register' %}">Đăng ký tại đây</a></span>
