--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -12,42 +12,42 @@
 {% block body %}
     <div id="page-type" style="display:none">aboutus</div>
     <section class="about-us-information">
-        <h3>Vài nét về Brownish</h3>
-        <p>Brownish là doanh nghiệp thương mại điện tử các sản phẩm thời trang có trụ sở
-            chính tại Thành phố Hồ Chí Minh được thành lập vào năm 2023. Các sản phẩm chính của doanh nghiệp được sản xuất 
-            bằng những vật liệu thân thiện với môi trường.
-            <br> Đối với các sản phẩm <strong>may mặc thông dụng</strong>, quần áo được may bằng <strong>vải sợi tre</strong> với nguồn nguyên liệu hoàn toàn từ Việt
-            Nam với mức giá từ 150000 - 400000 VNĐ
-            <br> Đối với các sản phẩm <strong>may mặc cao cấp</strong>, hoàn toàn được dệt từ <strong>vải lanh, được trồng và dệt thủ công từ tỉnh Hà Giang</strong>. Đây là loại vải 
-            có độ bóng tự nhiên cao, bề mặt mịn màng cùng tính hút ẩm tốt nên rất phù hợp để sử dụng trong thời tiết nóng ẩm tại Việt Nam.
-        </p>
+        <h3>Câu chuyện thương hiệu </h3>
+        <b>Xin chào các Nhà Thám Hiểm Trò Chơi!
+            Chào mừng đến với Game On - Nơi Mà Trò Chơi Trở Nên Huyền Bí!</b>
+            <br>
+            <p>Ở Game On, chúng tôi không chỉ bán các trò chơi, mà chúng tôi còn tạo ra những trải nghiệm độc đáo và kích thích sự sáng tạo. Bạn không chỉ là người mua hàng, mà là nhà phiêu lưu trên con đường không gian giải trí của chúng tôi. Trước hết hãy tìm hiểu câu chuyện hình thành thương hiệu của chúng tôi.
+                Năm 2017, trong một lần đi du lịch nước ngoài, nhóm chúng tôi ,hội những người yêu thích board game, đã có dịp trải nghiệm những trò chơi board game mới lạ và hấp dẫn. Chúng tôi nhận thấy rằng board game là một hình thức giải trí lành mạnh, giúp gắn kết mọi người với nhau.
+                 Chúng tôi cũng nhận thấy rằng thị trường board game ở Việt Nam còn rất tiềm năng, nhưng lại chưa có một cửa hàng online chuyên bán board game.
+                Với niềm đam mê board game và mong muốn mang lại cho mọi người cơ hội trải nghiệm những trò chơi board game thú vị,chúng tôi đã quyết định thành lập thương hiệu Game On.
+            </p>
     </section>
     <section class="about-us-information">
-        <h3>Tầm nhìn</h3>
-        <p>Để thời trang bền vững đến mọi nhà <br>
-        Đến năm 2030, Brownish mong muốn trở thành một trong các thương hiệu nội dẫn đầu tại thị trường thời trang bền vững tại Việt
-        Nam và tiên phong cho thời trang Việt để vươn ra khu vực, đồng thời nâng cao ý thức của người dùng về thời trang bền vững của người 
-        dùng Việt.
+        <h3>Tầm nhìn  </h3>
+        <p>Tại Game On, chúng tôi hướng đến việc trở thành nguồn cảm hứng và điểm đến hàng đầu cho 
+            những người yêu thích trò chơi board game trên toàn thế giới. Tầm nhìn của chúng tôi là xây dựng một cộng đồng đam mê, 
+            nơi mọi người không chỉ mua sắm trò chơi mà còn trải nghiệm sự kết nối, sáng tạo và niềm vui trong mỗi chiếc hộp trò chơi.
+
         </p>
     </section>
     <section class="about-us-information">
         <h3>Sứ mệnh</h3>
         <p>
-            Với mục đích phát triển bền vững và tinh thần bảo vệ môi trường, Brownish cống hiến cho sự sáng tạo và nỗ lực của mình để 
-            cung cấp cho người dùng những bộ quần áo và phụ kiện thanh lịch và đa năng được tạo nên từ chất liệu dễ tái chế và thân thiện 
-            với môi trường.
+            Sứ mệnh của chúng tôi là mang lại trải nghiệm trò chơi không giới hạn cho mọi người.
+             Chúng tôi cam kết cung cấp những trò chơi board game chất lượng cao, từ những cái tên kinh điển đến những sáng tạo mới,
+              để mọi người có thể khám phá, tận hưởng và chia sẻ niềm đam mê trò chơi
+
         </p>
     </section>
     <section class="about-us-information">
         <h3>Giá trị cốt lõi</h3>
         <p>
-            <strong>Thấu hiểu</strong>: Chúng tôi với đội ngũ trẻ trung luôn cố gắng tìm hiểu giới trẻ để đáp ứng nhu cầu ngày càng đa dạng & 
-            nâng cao chất lượng cuộc sống của khách hàng.<br><br>
-            <strong>Thân thiện</strong>: Những nhân công được làm việc trong môi trường lành mạnh sẵn sàng mang đến cho khách hàng sản phẩm và dịch vụ 
-            tốt nhất.<br><br>
-            <strong>Sáng tạo</strong>: Những nhà thiết kế trẻ không ngừng nỗ lực để mang tới cho khách hàng những mẫu trang phục thanh lịch và độc đáo.<br><br>
-            <strong>Bền vững</strong>: Chúng tôi ứng dụng công nghệ mới, sử dụng chất liệu hữu cơ có nguồn gốc hoàn toàn từ Việt Nam để hạn chế tối đa các chế phẩm có hại 
-            cho môi trường vào tạo nên những sản phẩm thân thiện với môi trường.
+            <strong>Đa Dạng và Sáng Tạo</strong>:  Chúng tôi tin rằng sự đa dạng trong trò chơi là chìa khóa để kích thích trí tưởng tượng và 
+            tạo ra những trải nghiệm mới. Chúng tôi luôn khuyến khích sự sáng tạo và đổi mới trong mọi khía cạnh của trò chơi. <br><br>
+            <strong>Kết Nối Cộng Đồng</strong>:Game On không chỉ là nơi mua sắm, mà là nơi cộng đồng yêu thích trò chơi gặp gỡ, 
+            giao lưu và chia sẻ. Chúng tôi tạo ra không gian để những người chơi kết nối và tận hưởng sự hỗ trợ từ cộng đồng rộng lớn của chúng tôi.<br><br>
+            <strong>Chất Lượng và Tin Cậy</strong>: : Chúng tôi cam kết cung cấp những trò chơi với chất lượng không gì sánh kịp. Mọi sản phẩm đều trải qua quá trình chọn lọc nghiêm ngặt để đảm bảo sự hài lòng và tin cậy của khách hàng.<br><br>
+          
         </p>
     </section>
 {% endblock %}
