--- a/interface/templates/interface/about_us.html
+++ b/interface/templates/interface/about_us.html
@@ -1,13 +1,13 @@
 {% extends 'interface/layout.html' %}
-{% block title%} Về chúng tôi - Brownish Clothing{% endblock %}
+{% block title%} Về chúng tôi - GameOn{% endblock %}
 {% block meta%}
-    <meta name="description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta name="description" content="GameOn là thương hiệu chuyên cung cấp các loại boardgame cho mọi lứa tuổi với đủ thể loại khác nhau bao gồm chiến thuật, cờ, xếp hình và cho trẻ em.">
     <!--Đây là đường link gốc của chính website này.  -->
     <meta property="og:type" content="home">
-    <meta property="og:title" content="Brownish Clothing - Quần áo thời trang bền vững, bảo vệ môi trường - Brownish Clothing">
-    <meta property="og:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
-    <meta name="twitter:title" content="Brownish Clothing - Quần áo thời trang bền vững, bảo vệ môi trường - Brownish Clothing">
-    <meta name="twitter:description" content="Bronish Clothing là thương hiệu Việt Nam chuyên kinh doanh quần áo, thời trang bền vững với chất liệu hữu cơ hoặc tái chế từ rác thải khó phân hủy.">
+    <meta property="og:title" content="GameOn- thương hiệu boardgame mang đến trải nghiệm tuyệt vời cho người dùng - GameOn">
+    <meta property="og:description" content="GameOn là thương hiệu chuyên cung cấp các loại boardgame cho mọi lứa tuổi với đủ thể loại khác nhau bao gồm chiến thuật, cờ, xếp hình và cho trẻ em.">
+    <meta name="twitter:title" content="GameOn- thương hiệu boardgame mang đến trải nghiệm tuyệt vời cho người dùng - GameOn">
+    <meta name="twitter:description" content="GameOn là thương hiệu chuyên cung cấp các loại boardgame cho mọi lứa tuổi với đủ thể loại khác nhau bao gồm chiến thuật, cờ, xếp hình và cho trẻ em.">
     {% endblock %}
 {% block body %}
     <div id="page-type" style="display:none">aboutus</div>
