--- a/interface/templates/interface/blog_view.html
+++ b/interface/templates/interface/blog_view.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 
-    {% block title %}{{blog.title}} - Brownish Clothing {% endblock%}
+    {% block title %}{{blog.title}} - GameOn {% endblock%}
     {% block meta%}
          <!-- Dưới 160 từ, tóm tắt nội dung trang, sử dụng từ khóa chính -->
         <meta name="description" content="{{blog.description}}">
