--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -200,7 +200,7 @@ section:not(.home-index) {
 }
 
 .dots li[class="dot-active"] {
-    background-color:rgb(200, 133, 131);
+    background-color:rgb(72, 120, 241);
 }
 .dots li:not(.dot-active):hover {
     cursor: pointer;
@@ -1180,11 +1180,18 @@ button.like-btn2 {
     }
   }
   
-  .footer-clean .copyright {
+  /* .footer-clean .copyright {
     margin-top:14px;
     margin-bottom:0;
     font-size:13px;
     opacity:0.6;
-  }
+  } */
+
+.footer-clean {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 3fr 3fr 4fr 2fr;
+    gap: 60px;
+}
   
   /* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
