--- a/interface/templates/interface/layout.html
+++ b/interface/templates/interface/layout.html
@@ -16,8 +16,8 @@
     <meta name="twitter:creator" content="@brownishvn">
 	<meta name="twitter:site" content="@brownishvn">
     <link rel="stylesheet" href="{% static 'interface/styles.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    {% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"> {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet"  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,9 +57,6 @@
     <!-- custom js link -->
     <footer>
         <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
                     <div class="col-sm-4 col-md-3 item">
                         <img src="{% static 'interface/images/gameon_logo.png' %}" class="logo" alt="" width="200" height="200">
                     </div>
@@ -88,18 +85,15 @@
                     </div>
                     <div class="col-lg-3 item social">
                         <h3>Theo dõi chúng tôi tại </h3>
-                        <a href="#"><i class="icon ion-social-facebook"></i></a>
-                        <a href="#"><i class="icon ion-social-twitter"></i></a>
-                        <a href="#"><i class="icon ion-social-instagram"></i></a>
+                        <i class="ri-facebook-circle-fill"></i>
+                        <i class="ri-instagram-fill"></i>
+                        <i class="ri-twitter-line"></i>
                         <p class="copyright">GAME ON © 2024</p>
                     </div>
-                </div>
-            </div>
-        </footer>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script> {% endcomment %}
     <script type="text/javascript" src="{% static 'interface/scripts.js'%}"></script>
     <script src="https://kit.fontawesome.com/ac094792cb.js" crossorigin="anonymous"></script>
     {% comment %} <script src="https://kit.fontawesome.com/ac094792cb.js" crossorigin="anonymous"></script>
