--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -1193,5 +1193,8 @@ button.like-btn2 {
     grid-template-columns: 3fr 3fr 4fr 2fr;
     gap: 60px;
 }
-  
+
+#shopping_cart_section {
+    margin-bottom: 600px;
+}
   /* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
