--- a/interface/static/interface/styles.css
+++ b/interface/static/interface/styles.css
@@ -903,8 +903,18 @@ button.like-btn2 {
     right: 20px;
 
   }
+  .footer-clean {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 3fr 3fr 4fr 2fr;
+    gap: 60px;
+}
 
 @media only screen and (max-width: 1000px) {
+    .footer-clean {
+        grid-template-columns: 3fr 2fr;
+        padding: 40px;
+    }
     #empty {
         margin-top: 50px;
     }
@@ -1001,6 +1011,11 @@ button.like-btn2 {
 
 
   @media only screen and (max-width: 700px) {
+    .footer-clean {
+        grid-template-columns: 1fr;
+        padding-left: 40px;
+
+    }
     .cart_item {
         height: 150px;
         padding: 10px;
@@ -1187,12 +1202,6 @@ button.like-btn2 {
     opacity:0.6;
   } */
 
-.footer-clean {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 3fr 3fr 4fr 2fr;
-    gap: 60px;
-}
 
 #shopping_cart_section {
     margin-bottom: 600px;
